--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 7px;
@@ -108,3 +106,25 @@ body {
     color: #fe4e6e;
 }
 
+.home-sci {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 40px;
+    width: 170px;
+    background: #fe4e6e;
+}
+
+.home-sci a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 30px;
+    background: transparent;
+    border: 2px solid aqua;
+    border-radius: 50%;
+    font-size: 20px;
+    color: aqua;
+    text-decoration: none;
+}
