--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,7 @@ body {
 }
 
 .logo {
+    position: relative;
     font-size: 25px;
     color: #fff;
     text-decoration: none;
@@ -112,10 +113,10 @@ body {
     position: absolute;
     bottom: 40px;
     width: 170px;
-    background: #fe4e6e;
 }
 
 .home-sci a {
+    position: relative;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -127,4 +128,9 @@ body {
     font-size: 20px;
     color: aqua;
     text-decoration: none;
+}
+
+.home-sci a:hover {
+    background: #ededed;
+    color: aqua;
 }
