--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ body {
 .logo {
     position: relative;
     font-size: 25px;
-    color: #fff;
+    color: aqua;
     text-decoration: none;
     font-weight: 600;
 }
